# pawl

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: CLAUDE.md  HANDOFF.md  insights.md
.claude/skills/claude-cli/: SKILL.md
.claude/skills/codex-cli/: SKILL.md
.claude/skills/compress/: SKILL.md
.claude/skills/debate/: SKILL.md
.claude/skills/deeptalk/: SKILL.md
.claude/skills/essence/: SKILL.md
.claude/skills/greenfield/: SKILL.md
.claude/skills/handoff/: SKILL.md
.claude/skills/interview/: SKILL.md
.claude/skills/pawl/: SKILL.md
.claude/skills/pickup/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/rethink/: SKILL.md
.claude/skills/wf/: ai-worker-guide.md  foreman-guide.md  task-authoring-guide.md
.claude/specs/: event-model-refactor.md  hooks-and-flow-control.md
.github/workflows/: ci.yml  release.yml
.wf/: README.md  config.jsonc
.wf/tasks/: bm-explicit.md  bm-vague.md  bm-wf-only.md  test.md  todo-py.md
docs/: README.md  cli.md  concepts.md  config.md  data-model.md  execution.md  log-system.md  prd.md  reusable-code.md  user-stories.md
src/: cli.rs  error.rs  main.rs
src/cmd/: agent.rs  approve.rs  capture.rs  common.rs  control.rs  create.rs  dashboard.rs  done.rs  enter.rs  events.rs  init.rs  log.rs  mod.rs  run.rs  serve.rs  start.rs  status.rs  wait.rs
src/model/: config.rs  event.rs  log.rs  mod.rs  state.rs  task.rs
src/tui/: app.rs  mod.rs
src/util/: git.rs  mod.rs  project.rs  shell.rs  tmux.rs  variable.rs
src/viewport/: mod.rs  tmux.rs
tests/: e2e-agent.sh  e2e-viewport.sh  e2e.sh
(+38 files in other folders)
