[package]
name = "wf"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
json_comments = "0.2"
fs2 = "0.4"
libc = "0.2"
notify = "7"
