[package]
name = "pawl"
version = "1.0.2"
edition = "2024"
description = "A resumable step sequencer for multi-step workflows"
license = "MIT"
repository = "https://github.com/yansircc/pawl"
homepage = "https://github.com/yansircc/pawl"
readme = "README.md"
keywords = ["workflow", "automation", "sequencer", "tmux", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".claude/", ".pawl/", ".wf/"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

fs2 = "0.4"
libc = "0.2"
notify = "7"
uuid = { version = "1", features = ["v4"] }
indexmap = { version = "2.13.0", features = ["serde"] }
tiny_http = "0.12"
